--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 
     <section>
       <h2>Gallery</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Mackinac_Bridge.jpg" alt="Mackinac Bridge spanning over water">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Detroit_Skyline_from_Windsor_Canada.jpg" alt="Detroit city skyline at sunset">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Sleeping_Bear_Dunes.jpg" alt="Sleeping Bear Dunes National Lakeshore with sand and water">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Mackinac_Bridge_2019.jpg/640px-Mackinac_Bridge_2019.jpg" 
+         alt="Mackinac Bridge spanning over water">
+
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Detroit_Skyline_Sunset.jpg/640px-Detroit_Skyline_Sunset.jpg" 
+         alt="Detroit city skyline at sunset">
+
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Sleeping_Bear_Dunes_National_Lakeshore.jpg/640px-Sleeping_Bear_Dunes_National_Lakeshore.jpg" 
+         alt="Sleeping Bear Dunes National Lakeshore with sand and water">
     </section>
   </main>
 
