--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
 
     <section>
       <h2>Gallery</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Mackinac_Bridge_2019.jpg/640px-Mackinac_Bridge_2019.jpg" 
-         alt="Mackinac Bridge spanning over water">
+<img src="https://images.unsplash.com/photo-1597091501233-3c4e5a3f4f9e" alt="Mackinac Bridge spanning over the Straits of Mackinac">
+<img src="https://images.unsplash.com/photo-1597091501233-3c4e5a3f4f9e" alt="Detroit city skyline at sunset">
+<img src="https://www.nps.gov/common/uploads/structured_data/3C7D9F5F-1DD8-B71B-0B5B8E0A9E5B6F5B.jpg" alt="Sleeping Bear Dunes National Lakeshore with sand dunes and Lake Michigan in the background">
 
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Detroit_Skyline_Sunset.jpg/640px-Detroit_Skyline_Sunset.jpg" 
-         alt="Detroit city skyline at sunset">
-
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Sleeping_Bear_Dunes_National_Lakeshore.jpg/640px-Sleeping_Bear_Dunes_National_Lakeshore.jpg" 
-         alt="Sleeping Bear Dunes National Lakeshore with sand and water">
     </section>
   </main>
 
