--- a/index.html
+++ b/index.html
@@ -3,53 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Michigan Facts</title>
+  <title>Welcome</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Skip link for accessibility -->
-  <a href="#main-content" class="skip-link">Skip to Main Content</a>
+<a href="#main" class="skip-link">Skip to Main Content</a>
 
-  <header>
-    <h1>Explore Michigan</h1>
-    <nav>
-      <img src="logo.png" alt="Site logo" />
-      <a href="https://www.michigan.org/" target="_blank" rel="noopener">Visit Michigan.org</a>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="about.html">About</a>
+  </nav>
+</header>
 
-  <main id="main-content">
-    <section>
-      <h2>Top Destinations</h2>
-      <ul>
-        <!-- <li> styling will be commented out in CSS -->
-        <li>Mackinac Bridge</li>
-        <li>Detroit Skyline</li>
-        <li>Sleeping Bear Dunes</li>
-      </ul>
-    </section>
+<main id="main">
+  <h1>Welcome to My Website</h1>
+  <p>This is the home page of my sample site.</p>
+  <img src="images/home.jpg" alt="Decorative plant on desk" />
+</main>
 
-    <section>
-      <h2>Gallery</h2>
-      <div class="grid">
-        <img src="https://images.unsplash.com/photo-1597091501233-3c4e5a3f4f9e" alt="Mackinac Bridge spanning over the Straits of Mackinac" />
-        <img src="https://example.com/detroit-skyline.jpg" alt="Detroit city skyline at sunset" />
-        <img src="https://www.nps.gov/common/uploads/structured_data/3C7D9F5F-1DD8-B71B-0B5B8E0A9E5B6F5B.jpg" alt="Sleeping Bear Dunes National Lakeshore" />
-      </div>
-    </section>
+<footer>
+  <p>&copy; 2025 My Site</p>
+</footer>
 
-    <section>
-      <h2>Other Images</h2>
-      <div class="flex">
-        <img src="https://via.placeholder.com/150" alt="Example 1" />
-        <img src="https://via.placeholder.com/150" alt="Example 2" />
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>June, 2025</p>
-  </footer>
 </body>
 </html>
